<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_daily"
        android:textColor="@color/colorAccent"
        android:title="@string/daily_reminder"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_release"
        android:textColor="@color/colorAccent"
        android:title="@string/release_today_reminder"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="@string/key_language"
        android:title="@string/change_language"
        app:iconSpaceReserved="false" />

</PreferenceScreen>