<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="60dp"
    tools:context=".FavoriteActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:padding="180dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_favoritemovies"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/tv_bg"
                android:gravity="center"
                android:text="@string/favMovie"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite_movies"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tv_favoritemovies"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                tools:listitem="@layout/rv_movie_item" />

            <TextView
                android:id="@+id/tv_nomoviefav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_favoritemovies"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:text="You haven't got any favorite, let's add one!"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_favoritetvshow"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/rv_favorite_movies"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/tv_bg"
                android:gravity="center"
                android:text="@string/favTvshow"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite_tvshow"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tv_favoritetvshow"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginStart="25dp"
                tools:listitem="@layout/rv_movie_item" />

            <TextView
                android:id="@+id/tv_notvfav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_favoritetvshow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:text="@string/noFavorite"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:visibility="gone" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>