<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".TVShowDetailActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:padding="180dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        android:background="@drawable/ic_back"
        android:elevation="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_nonfavorite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:elevation="3dp"
                android:scaleType="fitXY"
                android:backgroundTint="@color/colorPrimaryLight"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.santalu.diagonalimageview.DiagonalImageView
                android:id="@+id/series_poster_bg"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/series_poster"
                android:elevation="3dp"
                android:scaleType="centerCrop"
                app:di_distance="100dp"
                app:di_end="left"
                app:di_start="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/aquaman_bg" />

            <com.santalu.diagonalimageview.DiagonalImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/series_poster"
                android:elevation="3dp"
                android:scaleType="centerCrop"
                app:di_distance="100dp"
                app:di_end="left"
                app:di_start="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/tpBlack" />

            <ImageView
                android:id="@+id/series_poster"
                android:layout_width="200dp"
                android:layout_height="270dp"
                android:layout_marginStart="16dp"
                android:elevation="3dp"
                android:src="@drawable/poster_aquaman"
                android:contentDescription="@string/series_poster"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="@+id/series_poster_bg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.72" />

            <TextView
                android:id="@+id/series_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="3dp"
                android:text="@string/title_series"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/series_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/series_poster"
                app:layout_constraintVertical_bias="0.61" />

            <TextView
                android:id="@+id/series_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="3dp"
                android:text="@string/genre"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/series_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="3dp"
                android:text="@string/year"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/cd_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/series_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="15dp"
                android:text="@string/rating"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/cd_rating"
                app:layout_constraintEnd_toStartOf="@+id/cd_rating"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cd_rating" />

            <com.santalu.diagonalimageview.DiagonalImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="5dp"
                android:src="@color/colorAccent"
                app:di_distance="50dp"
                app:di_end="left"
                app:di_start="right"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/series_genre"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:elevation="3dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cd_rating"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:background="@color/green"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/series_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/cd_rating"
                app:layout_constraintEnd_toEndOf="@+id/cd_rating"
                app:layout_constraintStart_toStartOf="@+id/cd_rating"
                app:layout_constraintTop_toTopOf="@+id/cd_rating" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="350dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="638dp" />


            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/rv_cast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast"
                tools:layout_editor_absoluteX="25dp"
                tools:listitem="@layout/rv_cast_item" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/series_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:padding="30dp"
                android:text="@string/Lorem"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/youtubeFragment1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_cast" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="216dp" />

            <fragment
                android:id="@+id/youtubeFragment1"
                android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/series_desc" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="527dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>